--- a/www/css/app.css
+++ b/www/css/app.css
@@ -8,3 +8,8 @@ body {
     padding: 0;
     height: 100%;
 }
+
+@font-face {
+    font-family: KenPixelBlocks;
+    src: url("../data/kenpixel_blocks.ttf");
+}
