windows phone and ie fix for language and implementing pointer api

--- a/www/css/app.css
+++ b/www/css/app.css
@@ -7,4 +7,11 @@ body {
     margin: 0;
     padding: 0;
     height: 100%;
+    -ms-touch-action: none;
+    touch-action: none;
+}
+
+canvas {
+    -ms-touch-action: none;
+    touch-action: none;
 }
